IssuePage: newly created comments refetch the comment cards. Date is not added to comment cards

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -336,8 +336,11 @@ h1 {
   margin-left: auto;
 }
 
-.comment .commentDescription {
-
+.comment .commentDate {
+  font-size: 90%;
+  text-align: right;
+  font-style: italic;
+  margin-top: 20px;
 }
 
 .comment .commentDescriptionEdit{
